--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-scroll": "^1.8.10",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "styled-components": "^6.1.8"
+    "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.8",
+    "tsparticles-slim": "^2.12.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
