--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@types/react-scroll": "^1.8.10",
+    "axios": "^1.7.2",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.8",
     "tsparticles-slim": "^2.12.0",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
